--- a/partials/info.html
+++ b/partials/info.html
@@ -1,23 +1,54 @@
-<div id="info" class="page {{transitionState}}">
-
-    <h2>
-        Thanks for using India GKQuiz app.
-        <small>
-            We hope that you find this app to be a useful companion in your exam preparation.
-        </small>
-    </h2>
-
-    <br>
-
-    <p class="lead">
-        If you have any questions or suggestions for improvement, please write to Bharani at <a href="mailto:bharani@abhayam.co.in">bharani@abhayam.co.in</a>. If you found this app helpful, help us spread the work by sharing this app with your friends.
-    </p>
-
-    <br>
+<ng-include src="'partials/header.html'"></ng-include>
 
 
-    <p class="centered help">
-        Developed by <a href="http://www.resumonk.com" target="_blank" title="Online Resume Builder">Bharani Muthukumaraswamy</a>.
-    </p>
+<div id="info-view" class="content info-view">
 
-</div>
+    <div class="panel">
+        <div class="panel-header">
+            <h2>
+                Thanks for using this app.
+            </h2>
+
+            <h3>We hope that you find this app to be a useful companion in your exam preparation.</h3>
+
+        </div>
+
+
+
+        <div class="panel-content">
+
+
+            <p class="lead">
+                If you have any questions or suggestions for improvement, please write to Bharani at <a href="mailto:bharani@abhayam.co.in">bharani@abhayam.co.in</a>. If you found this app helpful, help us spread the work by sharing this app with your friends.
+            </p>
+
+            <br>
+
+            <div class="share">
+                <h5>
+                    Please share this app with your friends and help us spread the word.
+                </h5>
+
+                <button class="btn btn-block share-button facebook" share="facebook">Share on Facebook</button>
+
+                <button class="btn btn-block share-button twitter" share="twitter"><i class="icon-twitter-sign"></i>Tweet about this app</button>
+
+                <button class="btn btn-block share-button gplus" share="gplus"><i class="icon-google-plus-sign"></i> Share on Google+
+                </button>
+
+                <br>
+
+                <div class="rate">
+                    <h5>If you like using India GK Quiz, would you mind taking a moment to rate or review it?</h5>
+                    <a href="" class="btn btn-block cta" ng-click="$parent.rate()"><i class="icon-star-full"></i> Rate or review this app</a>
+                </div>
+
+
+                <p class="centered help">
+                    Developed by <a href="http://www.resumonk.com" target="_system" title="Online Resume Builder">Bharani Muthukumaraswamy</a>.
+                </p>
+
+            </div>
+        </div>
+
+    </div>
