--- a/partials/practice.html
+++ b/partials/practice.html
@@ -1,77 +1,103 @@
-<div id="practice" class="page {{transitionState}}" ng-controller="PracticeController">
+<ng-include src="'partials/header.html'"></ng-include>
 
-    <div class="question">
-        <h2>{{ question.question }}</h2>
-    </div>
-    
+<div id="practice" class="page content question-view">
+
     <form>
-        <ul class="list inset options-list">
-            <li ng-repeat="answer in question.options" 
-            ng-class="{ 
-            correct: correct_answer(question, $index),
-            incorrect: incorrect_answer(question, $index)
-        }">     
+        <ul class="list inset">
+            <li class="list-divider question">{{ question.question }}</li>
 
-        <label ng-click="select(answer)" ng-class="{ 
-            strike: question.strike_array.indexOf($index) >= 0,
-            active: selected == answer
-            }">                       
-            <input type="radio" value="{{$index}}" name="question[]" ng-model="question.selected" ng-disabled="has_attempted(question)"/>
-            {{ answer }}
-        </label>
-    </li>
-</ul>
+            <li class="option" 
+                ng-repeat="answer in question.options"
+                ng-class= "{ 
+                    correct: correct_answer(question, $index),
+                    incorrect: incorrect_answer(question, $index)
+                }">
 
 
+                <label 
+                    class="input-radio-wrapper" 
+                    ng-click="select(answer)" 
+                    ng-class="{ 
+                        strike: question.strike_array.indexOf($index) >= 0,
+                        active: selected == answer
+                    }">
 
-<div ng-show="has_attempted(question)">
-    <button ng-click="skip()" class="button-main button-block">Next Question <i class="icon-right-open"></i></button>    
-</div>
+                    <input type="radio" value="{{$index}}" name="question[]" ng-model="question.selected" ng-disabled="has_attempted(question)" class="input-radio">
+                    <div class="input-radio-inner">
+                        <div class="input-radio-button"></div>
+                    </div>
+                    {{ answer }}
+                </label>
+            </li>
+        </ul>
 
-<div ng-hide="has_attempted(question)" class="clear">
-    <button ng-click="check_answer(question)" ng-disabled="!question.selected" class="button-main button-block">
-        Check Answer
-    </button>
 
-    <div class="push-right">
-        <button ng-click="hide_two_options(question)" ng-disabled="question.hide_help_button" class="button button-50"><i class="icon-scissors"></i> 50-50</button>
-        <button ng-click="skip()" class="button button-skip">Skip <i class="icon-right-open"></i></button>    
+        <div class="answer" ng-show="show_answer">
+            <div ng-show="answered_correctly" class="alert success">
+                <h3>
+                    <i class="icon-smile"></i> Correct Answer! Good job!
+                </h3>
+            </div>
+            <div ng-hide="answered_correctly" class='alert warning'>
+                <h3>
+                    <i class="icon-frown"></i> Sorry wrong answer!<br>
+                    <small>
+                        You answered  <em>'{{ question.options[question.selected] }}'</em>  but the correct answer is <em>'{{ question.options[question.answer] }}'</em>.        
+                    </small>
+                </h3>
+
+            </div>
+        </div>
+
+
+
+        <div ng-show="has_attempted(question)">
+            <button ng-click="skip()" class="btn cta btn-block">Next Question <i class="icon-chevron-right"></i></button>    
+        </div>
+
+        <div ng-hide="has_attempted(question)" class="clear">
+            <button ng-click="check_answer(question)" ng-disabled="!question.selected" class="btn cta btn-block">
+                Check Answer
+            </button>
+
+            <div class="pull-right">
+                <button ng-click="hide_two_options(question)" ng-disabled="question.hide_help_button" class="btn-small"><i class="icon-cut"></i> 50-50</button>
+                <button ng-click="skip()" class="btn-small">Skip <i class="icon-chevron-right"></i></button>    
+            </div>
+        </div>
+    </form>
+
+
+  
+    <div class="bottom-cta">
+        <a href="" ng-click="slidePage('/recommended-books')">
+            <h3><i class="icon-book"></i> Recommended GK Books</h3>
+            <h4 class="subheader">Best GK and General Awareness books recommended by experts</h4>
+            <i class="icon-chevron-right"></i>
+        </a>
     </div>
-</div>
 
 
+    <!-- Rate Me Overlay -->
+    <div class="dialogs rating-dialog-wrapper" ng-show="show_rating_overlay">
+        <div id="rating-overlay" class="dialog">
+            <header class="dialog-title-region">
+                <h1 class="title">Rate this app</h1>
+            </header>
 
-</form>
+            <div class="dialog-content">
+                <h3>If you link using India GK Quiz, would you mind taking a moment to rate or review it? It won't take more than a minute. Thanks for your support!</h3>
 
-<div class="answer" ng-show="show_answer">
-    <div ng-show="answered_correctly" class="alert success">
-        <h3>
-            <i class="icon-smile"></i> Correct Answer! Good job!
-        </h3>
+                <button role="button" class="btn btn-block cta" ng-click="rate()"><i class="icon-star-full"></i> Rate on Play Store</button>
+                <button role="button" class="btn btn-block" ng-click="close_overlay()">Remind me later</button>
+                <a href="" ng-click="disable_notification()" class="disable-notifications">Don't show this again</a>
+            </div>
+
+        </div>
+
+        <!-- Other dialogs go here -->
     </div>
-    <div ng-hide="answered_correctly" class='alert warning'>
-        <h3>
-            <i class="icon-frown"></i> Sorry wrong answer!<br>
-            <small>
-                You answered  <em>'{{ question.options[question.selected] }}'</em>  but the correct answer is <em>'{{ question.options[question.answer] }}'</em>.        
-            </small>
-        </h3>
-
-    </div>
-</div>
 
 
-</div>
-
-
-<div class="bottom-cta">
-    <ul class="list inset test-mode-list books">
-        <li>
-            <a href="#/recommended-books">
-                <h3><i class="icon-book"></i> Recommended Books</h3>
-                <h4 class="subheader">Best GK and General Awareness books recommended by experts</h4>
-                <span class="chevron"></span>
-            </a>
-        </li>
-    </ul>
+        
 </div>
