--- a/partials/recommended_books.html
+++ b/partials/recommended_books.html
@@ -1,72 +1,63 @@
-<div id="recommended_books" class="page {{transitionState}}">
-    <h2 class="centered">Recommended Books</h2>
-    <ul class="list inset test-mode-list">
-        <li>
-            <a href="http://www.flipkart.com/search?q=general+knowledge+books+for+ias&affid=bharaniabh">
-                <h3>GK books for UPSC IAS - CSAT (Civil Service) Prelims</h3>
-                <span class="chevron"></span>
-            </a>
-        </li>
+<ng-include src="'partials/header.html'"></ng-include>
 
-        <li>
-            <a href="http://www.flipkart.com/search?q=current+affairs+2013&affid=bharaniabh">
-                <h3>
-                    General Awareness and Current Affairs 2013-2014
-                    <span class="chevron"></span>
-                </h3>
-            </a>
-        </li>
 
-        <li>
-            <a href="http://www.flipkart.com/search?q=general+knowledge+books+for+exams&affid=bharaniabh">
-                <h3>General Knowledge books for Competitive Exams</h3>
-                <span class="chevron"></span>
+<div id="recommended-books-view" class="content recommended-books-view">
+    <ul class="list inset recommended-books">
+        <li class="list-divider">Recommended Books</li>
+
+        <li class="list-item-single-line">
+            <a href="http://www.flipkart.com/search?q=general+knowledge+books+for+ias&affid=bharaniabh" target="_system" >
+            <strong>GK books for UPSC IAS - CSAT (Civil Service) Prelims</strong>
+                <i class="icon-chevron-right right-arrow"></i>
             </a>
         </li>
 
 
-
-        <li>
-            <a href="http://www.flipkart.com/search?q=general+knowledge+books+in+hindi&affid=bharaniabh">
-                <h3>GK and Current Affairs books in Hindi</h3>
-                <span class="chevron"></span>
+        <li class="list-item-single-line">
+            <a href="http://www.flipkart.com/search?q=current+affairs+2013&affid=bharaniabh" target="_system" >
+            <strong>General Awareness and Current Affairs 2013-2014</strong>
+                <i class="icon-chevron-right right-arrow"></i>
             </a>
         </li>
 
-        <li>
-            <a href="http://www.flipkart.com/search?q=general+knowledge+books+for+bank+po+exams&affid=bharaniabh">
-                <h3>GK books for Banking, Bank PO and Finance exams</h3>
-                <span class="chevron"></span>
+
+        <li class="list-item-single-line">
+            <a href="http://www.flipkart.com/search?q=general+knowledge+books+for+exams&affid=bharaniabh" target="_system" >
+            <strong>General Knowledge books for Competitive Exams</strong>
+                <i class="icon-chevron-right right-arrow"></i>
             </a>
         </li>
-        
-        <li>
-            <a href="http://www.flipkart.com/search?q=general+knowledge+books+for+children&affid=bharaniabh">
-                <h3>General Knowledge Books for Children</h3>
-                <span class="chevron"></span>
+
+
+        <li class="list-item-single-line">
+            <a href="http://www.flipkart.com/search?q=general+knowledge+books+in+hindi&affid=bharaniabh" target="_system" >
+            <strong>GK and Current Affairs books in Hindi</strong>
+                <i class="icon-chevron-right right-arrow"></i>
             </a>
         </li>
-        <li>
-            <a href="http://www.flipkart.com/search?q=general+knowledge+books+for+ssc&affid=bharaniabh">
-                <h3>SSC General Awareness and GK books</h3>
-                <span class="chevron"></span>
+
+
+        <li class="list-item-single-line">
+            <a href="http://www.flipkart.com/search?q=general+knowledge+books+for+bank+po+exams&affid=bharaniabh" target="_system" >
+            <strong>GK books for Banking, Bank PO and Finance exams</strong>
+                <i class="icon-chevron-right right-arrow"></i>
             </a>
         </li>
+
+        <li class="list-item-single-line">
+            <a href="http://www.flipkart.com/search?q=general+knowledge+books+for+children&affid=bharaniabh" target="_system" >
+            <strong>General Knowledge Books for Children</strong>
+                <i class="icon-chevron-right right-arrow"></i>
+            </a>
+        </li>
+
+        <li class="list-item-single-line">
+            <a href="http://www.flipkart.com/search?q=general+knowledge+books+for+ssc&affid=bharaniabh" target="_system" >
+            <strong>SSC General Awareness and GK books</strong>
+                <i class="icon-chevron-right right-arrow"></i>
+            </a>
+        </li>
+
+
     </ul>
-
-    <br>
-    
-    <iframe src="http://www.flipkart.com/affiliate/displayWidget?affrid=WRID-138190801813292500" scrolling="no" marginwidth="0" marginheight="0" ></iframe>
-
-    <iframe src="http://www.flipkart.com/affiliate/displayWidget?affrid=WRID-138190787880059166" scrolling="no" marginwidth="0" marginheight="0" ></iframe>
-
-    <iframe src="http://www.flipkart.com/affiliate/displayWidget?affrid=WRID-138190784940430742" scrolling="no" marginwidth="0" marginheight="0" ></iframe>
-    
-    <iframe src="http://www.flipkart.com/affiliate/displayWidget?affrid=WRID-138190763517118551" scrolling="no" marginwidth="0" marginheight="0" ></iframe>
-
-    <iframe src="http://www.flipkart.com/affiliate/displayWidget?affrid=WRID-138190766845274051" scrolling="no" marginwidth="0" marginheight="0" ></iframe>
-
-
-
 </div>
-
