--- a/partials/home.html
+++ b/partials/home.html
@@ -1,4 +1,3 @@
-
 <ng-include src="'partials/header.html'"></ng-include>
 
 <div class="content home-view">
@@ -49,5 +48,18 @@
             </a>
         </li>
     </ul>
+
+    <div class="ad-centered">
+        <!-- India GK Quiz Banner -->
+        <div class="ad-centered">
+            <ins class="adsbygoogle"
+            style="display:inline-block;width:320px;height:50px;"
+            data-ad-client="ca-pub-5290099014358385"
+            data-ad-slot="7498945343"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+    </div>
 </div>
 
