--- a/partials/practice.html
+++ b/partials/practice.html
@@ -78,6 +78,18 @@
     </div>
 
 
+    <div class="adsense-responsive">
+        <!-- India GK Quiz Square -->
+        <ins class="adsbygoogle"
+             style="display:inline-block;width:250px;height:250px"
+             data-ad-client="ca-pub-5290099014358385"
+             data-ad-slot="7359344540"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
+
     <!-- Rate Me Overlay -->
     <div class="dialogs rating-dialog-wrapper" ng-show="show_rating_overlay">
         <div id="rating-overlay" class="dialog">
