--- a/partials/test.html
+++ b/partials/test.html
@@ -102,6 +102,17 @@
                     </div>
                 </div>
             </form>
+
+            <div class="ad-centered" ng-if="show_ad($index)">
+                <!-- India GK Quiz Banner -->
+                <ins class="adsbygoogle"
+                style="display:inline-block;width:320px;height:50px;"
+                data-ad-client="ca-pub-5290099014358385"
+                data-ad-slot="7498945343"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
         </li>
 
 
